styles/main.scss
@import "constants";
@import "sonogram-player";
@import "sonogram-classifier";
@import "field-guide";
@import "details";
@import "lib/zooniverse-bar.css";

html {
	background: url("background-noise.jpg"); // TODO: Gradient
	color: $white;
	font: 12px Titillium, "Helvetica Neue", Arial, sans-serif;
	overflow-y: scroll; // Force scroll bar to prevent jumping.

	> body {
		margin: 0;
	}
}

// Only show the current translation.
[lang="en"] [lang="de"], [lang="en"] [lang="pl"],
[lang="de"] [lang="en"], [lang="de"] [lang="pl"],
[lang="pl"] [lang="en"], [lang="pl"] [lang="de"] {
	display: none;
}

#zooniverse-bar {
	position: relative;
	z-index: 2;
}

#app {
	@include contain-floats;
	margin: 0 auto;
	position: relative;
	width: $full-width;

	> header {
		margin: 10px 0;

		> nav {
			position: relative;

			> ul {
				@include contain-floats;
				margin: 0;
				padding: 0;
				text-align: center;

				> li {
					display: inline-block;

					&:first-child {
						margin-left: 0;
					}

					> a {
						color: inherit;
						display: block;
						font-size: 15px;
						letter-spacing: 1px;
						padding: 20px 50px;
						text: {
							decoration: none;
							transform: uppercase;
						};

						&:hover,
						&.active {
							color: $gold;
						}

						> .logo {
							vertical-align: -25px;
							width: 120px;
						}
					}
				}
			}
		}
	}

	> #main {
		margin-bottom: 20px;
		position: relative;

		// Main pages
		> section {
			@include transition(#{
				left 0.25s ease-in-out,
				opacity 0.25s ease-in-out
			});
			left: 0;
			max-height: 100%;
			opacity: 0;
			overflow: hidden;
			position: absolute;
			top: 0;
			width: 100%;

			&.active {
				float: left;
				opacity: 1;
				overflow: visible;
				position: relative;
				z-index: 1;
			}

			&.before {
				left: -16.67%;
			}

			&.after {
				left: 16.67%;
			}

			// Second-level tabs
			> section {
				display: none;

				&.active {
					display: block;
				}
			}

			> header {
				> nav {
					font-size: 14px;

					> ul {
						padding: 0;

						> li {
							display: inline-block;

							> a {
								background: transparentize($white, 0.75);
								color: $black;
								display: block;
								padding: 5px 10px;
								text-decoration: none;
								text-transform: uppercase;

								&:hover {
									background: transparentize($white, 0.67);
								}

								&.active {
									background: $gold;
								}
							}
						}
					}
				}
			}
		}

		.primary {
			float: left;
			max-width: 33%;
		}

		.secondary {
			float: right;
			max-width: 33%;
		}

		h2 {
			font: {
				size: 24px;
				weight: normal;
			}
			text-transform: uppercase;
		}

		h3 {
			font: {
				size: 16px;
				weight: normal;
			}
			text-transform: uppercase;
		}
	}

	a {
		color: $gold;
		text-decoration: none;

		img {
			border: 0;
		}
	}
}

$titillium-dir: "lib/titillium";

@font-face {
	font-family: "Titillium";
	font-weight: 100;
	font-style: normal;
	src: url($titillium-dir + "/TitilliumText22L001-webfont.eot");
	src:
		url($titillium-dir + "/TitilliumText22L001-webfont.eot?#iefix") format("embedded-opentype"),
		url($titillium-dir + "/TitilliumText22L001-webfont.woff") format("woff"),
		url($titillium-dir + "/TitilliumText22L001-webfont.ttf") format("truetype"),
		url($titillium-dir + "/TitilliumText22L001-webfont.svg#TitilliumText22LThin") format("svg");
}

@font-face {
	font-family: "Titillium";
	font-weight: 400;
	font-style: normal;
	src: url($titillium-dir + "/TitilliumText22L002-webfont.eot");
	src:
		url($titillium-dir + "/TitilliumText22L002-webfont.eot?#iefix") format("embedded-opentype"),
		url($titillium-dir + "/TitilliumText22L002-webfont.woff") format("woff"),
		url($titillium-dir + "/TitilliumText22L002-webfont.ttf") format("truetype"),
		url($titillium-dir + "/TitilliumText22L002-webfont.svg#TitilliumText22LLight") format("svg");
}

@font-face {
	font-family: "Titillium";
	font-weight: 700;
	font-style: normal;
	src: url($titillium-dir + "/TitilliumText22L004-webfont.eot");
	src:
		url($titillium-dir + "/TitilliumText22L004-webfont.eot?#iefix") format("embedded-opentype"),
		url($titillium-dir + "/TitilliumText22L004-webfont.woff") format("woff"),
		url($titillium-dir + "/TitilliumText22L004-webfont.ttf") format("truetype"),
		url($titillium-dir + "/TitilliumText22L004-webfont.svg#TitilliumText22LMedium") format("svg");
}

